2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el (skk-define-menu-bar-map): Fix menu commands.

2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e21.el (skk-e21-prepare-modeline-properties): Do nothing on
	tty.

	* skk-macs.el (skk-mode-string-to-indicator): Ditto.

	* skk.el (skk-make-indicator-alist-1): Ditto.

2001-09-01  YOSHIZAWA Masahiro <manbou@ceres.dti.ne.jp>

	* skk-e21.el (skk-e21-modeline-property): Fix for Emacs-21.0.105.

2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* etc/Emacs.ad: Add items for popup menu.

	* skk-e21.el: Popup menu improvements.
	(skk-e21-modeline-menu): Always use a new hash table so that key
	comparison should always fail.

	* skk-xemacs.el (skk-xemacs-find-func-keys): Show "C-j" if the
	key description is "LFD".

2001-08-31  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Re-indent.

	* ChangeLog.1, ChangeLog.2, ChangeLog.2.daredevil: New files.

	* ChangeLog.daredevil: No longer here.

	* skk-dcomp.el (keyboard-quit@around@skk-dcomp-ad): Make sure
	`skk-dcomp-start-point' and `skk-dcomp-end-point' are markers.

	* skk-e21.el (skk-e21-property-alist): New variable.
	(skk-e21-prepare-modeline-properties): New function.

	* skk-macs.el (skk-mode-string-to-indicator): Refer to
	`skk-e21-property-alist'.

	* skk.el (skk-make-indicator-alist): Call
	`skk-e21-prepare-modeline-properties'.
	(skk-make-indicator-alist-1): Refer to `skk-e21-property-alist'.

2001-08-30  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* install-info.el (install-info-delete-entry): Regexp fix.

	* skk-macs.el (skk-j-mode-on): Call
	`set-buffer-local-cursor-color' under FSF Emacs.

	* skk-tut.el (skktut-setup-jisyo-buffer): Add "today" entry.

	* etc/NICOLA-SKK.tut: Modify for the latest version of
	NICOLA-DDSKK.

2001-08-27  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-show-buffer): Call
	`other-window' if no window for the minibuffer origin is found.
