@@ -1,3 +1,8 @@
+2001-09-03  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>
+
+	* skk-lookup.el: Require lookup after loading lookup.el and only
+	when `lookup-use-bitmap' is non-nil.
+
 2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
 
 	* skk.el (skk-define-menu-bar-map): Fix menu commands.
@@ -1706,8 +1711,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.343 2001/09/02 06:46:18 czkmt Exp $
-Last Modified: $Date: 2001/09/02 06:46:18 $
+Version: $Id: ChangeLog,v 1.344 2001/09/02 21:12:39 minakaji Exp $
+Last Modified: $Date: 2001/09/02 21:12:39 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
